cleanup GitHub Actions jobs

--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -22,20 +22,34 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
+        toolset: [cl, icx, clang-cl]
         qt_ver: [6.4.2, 5.15.2]
         qt_target: [desktop]
         qt_arch: [win64_msvc2019_64]
+        msvc_arch: [x64]
+        qt_arch_install: [msvc2019_64]
+        mingw_arch: [MINGW64]
         include:
-          - qt_ver: 6.4.2
+          - toolset: cl
+            qt_ver: 6.4.2
             qt_modules: "qt5compat qtimageformats"
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64
-            mingw_arch: MINGW64
-          - qt_ver: 5.15.2
+          - toolset: cl
+            qt_ver: 5.15.2
             qt_modules: ""
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64
-            mingw_arch: MINGW64
+          - toolset: icx
+            qt_ver: 6.4.2
+            qt_modules: "qt5compat qtimageformats"
+          - toolset: icx
+            qt_ver: 5.15.2
+            qt_modules: ""
+          - toolset: clang-cl
+            qt_ver: 6.4.2
+            qt_modules: "qt5compat qtimageformats"
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-15.0.7/LLVM-15.0.7-win64.exe
+          - toolset: clang-cl
+            qt_ver: 5.15.2
+            qt_modules: ""
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-15.0.7/LLVM-15.0.7-win64.exe
     env:
       targetName: CodeInspector
       
@@ -81,88 +95,8 @@ jobs:
           git apply ..\zlib.patch
           cd ..\..
       
-      - name: build-msvc
-        shell: cmd
-        env:
-          vc_arch: ${{ matrix.msvc_arch }}
-        run: |
-          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
-          set PATH=%PATH%;%CD%\jom
-          cd 3rdparty\scintilla\qt\ScintillaEdit
-          python WidgetGen.py
-          cd ..\..\..\..
-          mkdir build
-          cd build
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl -G Ninja ..
-          ninja
-          cd ..
-          
-  win32-clang-msvc:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        qt_ver: [6.4.2, 5.15.2]
-        qt_target: [desktop]
-        qt_arch: [win64_msvc2019_64]
-        include:
-          - qt_ver: 6.4.2
-            qt_modules: "qt5compat qtimageformats"
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64
-            mingw_arch: MINGW64
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-15.0.7/LLVM-15.0.7-win64.exe
-          - qt_ver: 5.15.2
-            qt_modules: ""
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64
-            mingw_arch: MINGW64
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-15.0.7/LLVM-15.0.7-win64.exe
-    env:
-      targetName: CodeInspector
-      
-    steps:
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v3
-        with:
-          version: ${{ matrix.qt_ver }}
-          target: ${{ matrix.qt_target }}
-          arch: ${{ matrix.qt_arch }}
-          cache: 'true'
-          cache-key-prefix: 'install-qt-action-${{ matrix.qt_arch }}-${{ matrix.qt_ver }}'
-          modules: ${{ matrix.qt_modules }}
-          aqtversion: '==3.0.1'
-                    
-      - uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          msystem: ${{ matrix.mingw_arch }}
-          install: zip curl
-          
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-          submodules: true
-      
-      - name: copy CMakeLists.txt
-        shell: msys2 {0}
-        run: |
-          cd 3rdparty
-          cp cmakes/CMakeLists.txt.lexilla lexilla/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.lua lua/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.lpeg lpeg/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.scintilla scintilla/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.scintillua scintillua/CMakeLists.txt
-
-      - name: patch 
-        shell: cmd
-        run: |
-          cd 3rdparty\scintillua
-          git apply ..\scintillua.patch
-          cd ..\zlib
-          git apply ..\zlib.patch
-          cd ..\..
-          
       - name: Set up clang for Windows
+        if: matrix.toolset == 'clang-cl'
         shell: cmd
         run: |
           mkdir llvm
@@ -170,57 +104,9 @@ jobs:
           curl.exe -o LLVM.exe -L ${{ matrix.clang_link }}
           7z.exe x LLVM.exe
           cd ..
-                
-      - name: build-msvc
-        shell: cmd
-        env:
-          vc_arch: ${{ matrix.msvc_arch }}
-        run: |
-          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
-          set PATH=%PATH%;%CD%\llvm\bin;%CD%\jom
-          cd 3rdparty\scintilla\qt\ScintillaEdit
-          python WidgetGen.py
-          cd ..\..\..\..
-          mkdir build
-          cd build
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl -G Ninja ..
-          ninja
-          cd ..
-          
-  win32-intel-msvc:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        qt_ver: [6.4.2, 5.15.2]
-        qt_target: [desktop]
-        qt_arch : [win64_msvc2019_64]
-        include:
-          - qt_ver: 6.4.2
-            qt_modules: "qt5compat qtimageformats"
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64
-            mingw_arch: MINGW64 
-          - qt_ver: 5.15.2
-            qt_modules: ""
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64
-            mingw_arch: MINGW64
-    env:
-      targetName: CodeInspector
-      
-    steps:
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v3
-        with:
-          version: ${{ matrix.qt_ver }}
-          target: ${{ matrix.qt_target }}
-          arch: ${{ matrix.qt_arch }}
-          cache: 'true'
-          cache-key-prefix: 'install-qt-action-${{ matrix.qt_arch }}-${{ matrix.qt_ver }}'
-          modules: ${{ matrix.qt_modules }}
-          aqtversion: '==3.0.1'
-                    
+
       - name: cache intel install
+        if: matrix.toolset == 'icx'
         id: cache-install
         uses: actions/cache@v2
         with:
@@ -230,64 +116,33 @@ jobs:
           key: install-${{ env.CACHE_NUMBER }}-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-compiler-${{ hashFiles('**/scripts/cache_exclude_windows.sh') }}
 
       - name: install intel
-        if: steps.cache-install.outputs.cache-hit != 'true'
+        if: steps.cache-install.outputs.cache-hit != 'true' && matrix.toolset == 'icx'
         run: |
           git clone --depth=1 https://github.com/oneapi-src/oneapi-ci.git oneapi-ci
           cd oneapi-ci
           scripts/install_windows.bat ${{ env.WINDOWS_HPCKIT_URL }} ${{ env.WINDOWS_CPP_COMPONENTS }}
-          
+
       - name: restore registry on cache hit
-        if: steps.cache-install.outputs.cache-hit == 'true'
+        if: steps.cache-install.outputs.cache-hit == 'true' && matrix.toolset == 'icx'
         run:  |
           git clone --depth=1 https://github.com/oneapi-src/oneapi-ci.git oneapi-ci
           cd oneapi-ci
           scripts/restore_registry.bat ${{ env.COMPILER_VERSION }}
-        
-      - uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          msystem: ${{ matrix.mingw_arch }}
-          install: zip curl
-          
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-          submodules: true
-      
-      - name: copy CMakeLists.txt
-        shell: msys2 {0}
-        run: |
-          cd 3rdparty
-          cp cmakes/CMakeLists.txt.lexilla lexilla/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.lua lua/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.lpeg lpeg/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.scintilla scintilla/CMakeLists.txt
-          cp cmakes/CMakeLists.txt.scintillua scintillua/CMakeLists.txt
 
-      - name: patch 
-        shell: cmd
-        run: |
-          cd 3rdparty\scintillua
-          git apply ..\scintillua.patch
-          cd ..\zlib
-          git apply ..\zlib.patch
-          cd ..\..
-                
-      - name: build-intel-msvc
+      - name: build-msvc
         shell: cmd
         env:
           vc_arch: ${{ matrix.msvc_arch }}
         run: |
-          dir "C:\Program Files (x86)\Intel\oneAPI\compiler"
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
           call "C:\Program Files (x86)\Intel\oneAPI\compiler\${{ env.COMPILER_VERSION }}\env\vars.bat"
-          set PATH="C:\Program Files (x86)\Intel\oneAPI\compiler\${{ env.COMPILER_VERSION }}\windows\bin-llvm\";%CD%\jom;%PATH%
+          set PATH="C:\Program Files (x86)\Intel\oneAPI\compiler\${{ env.COMPILER_VERSION }}\windows\bin-llvm\";%CD%\llvm\bin;%CD%\jom;%PATH%
           cd 3rdparty\scintilla\qt\ScintillaEdit
           python WidgetGen.py
           cd ..\..\..\..
           mkdir build
           cd build
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icx -G Ninja ..
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.toolset }} -DCMAKE_CXX_COMPILER=${{ matrix.toolset }} -G Ninja ..
           ninja
           cd ..
           
