--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -1,4 +1,4 @@
-name: Desktop-qt
+﻿name: Desktop-qt
 on: 
   push:
     paths-ignore:
@@ -160,6 +160,15 @@ jobs:
             qt_build: qt6
             qt_dir: /ucrt64/lib/cmake/Qt6
             cmake_prefix_path: /ucrt64
+          - qt_arch: mingw64_qt6-gcc
+            mingw_arch: MINGW64
+            mingw_prefix: mingw-w64-x86_64
+            toolchains: gcc
+            c: gcc
+            cxx: g++
+            qt_build: qt6
+            qt_dir: /mingw64/lib/cmake/Qt6
+            cmake_prefix_path: /ucrt64
           - qt_arch: mingw64_qt6-clang
             mingw_arch: CLANG64 
             mingw_prefix: mingw-w64-clang-x86_64
@@ -169,24 +178,6 @@ jobs:
             qt_build: qt6
             qt_dir: /clang64/lib/cmake/Qt6
             cmake_prefix_path: /clang64
-          - qt_arch: mingw64_qt6-static-ucrt-gcc
-            mingw_arch: UCRT64
-            mingw_prefix: mingw-w64-ucrt-x86_64
-            toolchains: gcc
-            c: gcc
-            cxx: g++
-            qt_build: qt6-static
-            qt_dir: /ucrt64/qt6-static/lib/cmake/Qt6
-            cmake_prefix_path: /ucrt64/qt6-static
-          - qt_arch: mingw64_qt6-static-clang
-            mingw_arch: CLANG64 
-            mingw_prefix: mingw-w64-clang-x86_64
-            toolchains: clang
-            c: clang
-            cxx: clang++
-            qt_build: qt6-static
-            qt_dir: /clang64/qt6-static/lib/cmake/Qt6
-            cmake_prefix_path: /clang64/qt6-static
           - qt_arch: mingw64_qt5-ucrt-gcc
             mingw_arch: UCRT64
             mingw_prefix: mingw-w64-ucrt-x86_64
@@ -196,6 +187,15 @@ jobs:
             qt_build: qt5
             qt_dir: /ucrt64/lib/cmake/Qt5
             cmake_prefix_path: /ucrt64
+          - qt_arch: mingw64_qt5-gcc
+            mingw_arch: MINGW64
+            mingw_prefix: mingw-w64-x86_64
+            toolchains: gcc
+            c: gcc
+            cxx: g++
+            qt_build: qt5
+            qt_dir: /mingw64/lib/cmake/Qt5
+            cmake_prefix_path: /mingw64
           - qt_arch: mingw64_qt5-clang
             mingw_arch: CLANG64
             mingw_prefix: mingw-w64-clang-x86_64
