--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -10,12 +10,15 @@ on:
       - 'LICENSE'
 
 env:
-  WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/19078/w_BaseKit_p_2023.0.0.25940_offline.exe
-  WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/19085/w_HPCKit_p_2023.0.0.25931_offline.exe
+  WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/f96c71db-2c6c-45d9-8c1f-0348ef5885cf/w_BaseKit_p_2023.2.0.49396_offline.exe
+  WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/438527fc-7140-422c-a851-389f2791816b/w_HPCKit_p_2023.2.0.49441_offline.exe
   WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
   WINDOWS_DPCPP_COMPONENTS: intel.oneapi.win.dpcpp-compiler
-  COMPILER_VERSION: 2023.0.0
-      
+  SAMPLES_TAG: 2023.2.0
+  COMPILER_VERSION: 2023.2.0
+  TBB_VERSION: 2021.10.0
+  VS_VER: vs2022
+  CLANG_LINK: https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.6/LLVM-17.0.6-win64.exe
       
 jobs:
   win32-msvc:
@@ -45,11 +48,9 @@ jobs:
           - toolset: clang-cl
             qt_ver: 6.6.1
             qt_modules: "qt5compat qtimageformats"
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.5/LLVM-17.0.5-win64.exe
           - toolset: clang-cl
             qt_ver: 5.15.2
             qt_modules: ""
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.5/LLVM-17.0.5-win64.exe
     env:
       targetName: CodeInspector
       
@@ -101,7 +102,7 @@ jobs:
         run: |
           mkdir llvm
           cd llvm
-          curl.exe -o LLVM.exe -L ${{ matrix.clang_link }}
+          curl.exe -o LLVM.exe -L ${{ env.CLANG_LINK }}
           7z.exe x LLVM.exe
           cd ..
 
