install ninja on macOS

--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -341,6 +341,7 @@ jobs:
       
       - name: build macos
         run: |
+          brew install ninja
           cd 3rdparty/scintilla/qt/ScintillaEdit
           python WidgetGen.py
           cd ../../../..
